enable pre-render on about page

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,6 +1,8 @@
 ---
 import Layout from "../layouts/Layout.astro";
 import Random from "../components/Random";
+
+export const prerender = true;
 ---
 
 <Layout title="About this demo">
